apps/server/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: budgeteer.api # <--- This will be the external URL for your backend
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: server # This should match the name of your backend Service
            port:
              number: 3000 # This should match the port your backend Service exposes
